Added med game and reduced size of large game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SmallGameActivity" />
-        <activity android:name=".LargeGameActivity"></activity>
+        <activity android:name=".LargeGameActivity" />
+        <activity android:name=".MediumGameActivity" />
     </application>
 
 </manifest>
